# shaniu

./: README.md
backend/: pyproject.toml
backend/app/: main.py  recommendation.py  repository.py  schemas.py  scoring.py  service.py
backend/app/static/: index.html
backend/tests/: test_api.py
docs/: mvp-plan.md
